# medguard-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANUAL_TEST_INPUTS.md  README.md  TESTING_GUIDE.md  manual_test.py  pyproject.toml  run_comprehensive_tests.py  test_cases_basic.json  test_cases_complex.json  test_cases_edge.json  test_cases_moderate.json
apps/data_access/: apps.py
apps/data_access/migrations/: 0001_initial.py  0002_add_drug_alternatives.py
apps/data_access/models/: __init__.py  adverse_reaction.py  alternative.py  contraindication.py  drug.py  event_report.py  indication.py  interaction.py  (+1 more)
apps/frontend/: __init__.py  apps.py  forms.py  urls.py  views.py
docs/: developer_guide.md  phase_3_completion_report.md
docs/data_layer/: data_inspection_report.md  normalization_strategy.md  phase_2_plan.md  proposed_schema.md
medguard/: settings.py  urls.py
medguard_app/: __init__.py  apps.py  urls.py  views.py
medguard_app/orchestrator/: __init__.py  decision_pipeline.py
medguard_app/services/: __init__.py  drug_alternatives.py  drug_alternatives.py.backup  interaction_checker.py  interaction_checker.py.backup  llm_service.py  risk_engine.py  side_effect_analyzer.py  side_effect_analyzer.py.backup  symptom_analyzer.py  treatment_validator.py  treatment_validator.py.backup
medguard_app/tests/: __init__.py  test_decision_pipeline.py
medguard_app/utils/: __init__.py  normalizers.py
scripts/: refactor_all.py  remove_comments_emojis.py  replace_services.py  run_refactoring.bat  test_api.py  verify_business_layer.py  verify_data_layer.py
(+26 files in other folders)
