[project]
name = "medguard-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "django>=6.0.3",
    "mysqlclient>=2.2.8",
    "rapidfuzz>=3.14.3",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
